--- a/MyCity4Kids/MyCity4Kids/res/layout/challenge_listing_adapter.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/challenge_listing_adapter.xml
@@ -1,153 +1,142 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    xmlns:card_view="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    android:background="@drawable/short_story_border_bg">
+    android:background="#f9f9f9"
+    card_view:cardCornerRadius="0dp"
+    card_view:cardElevation="0dp">
 
     <RelativeLayout
-        android:id="@+id/challenge_header_text"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:background="@color/white"
-        android:visibility="gone">
-
-        <ImageView
-
-            android:id="@+id/ChallengeNameImage"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/groups_generic"
-            android:visibility="gone" />
-
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/ChallengeNameText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:gravity="center"
-            android:text="ABHINAV"
-            android:textColor="@color/white"
-            android:textSize="30sp"
-            android:visibility="gone"
-            app:fontName="oswald.ttf" />
-
-        <LinearLayout
-            android:id="@+id/submit_challenge_relative_Layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@id/ChallengeNameImage"
-            android:layout_centerHorizontal="true"
-            android:background="@color/white"
-            android:gravity="center">
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/submit_story_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/update_profile_bg"
-                android:gravity="center"
-                android:paddingBottom="7dp"
-                android:paddingLeft="12dp"
-                android:paddingRight="12dp"
-                android:paddingTop="7dp"
-                android:text="@string/submit_story_text"
-                android:textColor="@color/white"
-                android:textSize="18sp"
-                app:fontName="oswald_regular.ttf" />
-        </LinearLayout>
-
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:id="@+id/rootView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/challenge_header_text"
-        android:visibility="gone">
-
+        android:background="@drawable/short_story_border_bg">
 
         <RelativeLayout
-            android:id="@+id/mainView"
+            android:id="@+id/challenge_header_text"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/short_story.card_bg_1"
-            android:elevation="2dp">
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:visibility="gone">
 
-            <RelativeLayout
-                android:id="@+id/titleContainer"
+            <ImageView
+                android:id="@+id/ChallengeNameImage"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <com.mycity4kids.widget.CustomFontTextView
-                    android:id="@+id/storyTitleTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@+id/storyOptionImageView"
-                    android:maxLines="2"
-                    android:paddingBottom="14dp"
-                    android:paddingLeft="14dp"
-                    android:paddingRight="14dp"
-                    android:paddingTop="14dp"
-                    android:text=""
-                    android:textColor="@color/short_story.light_black_color"
-                    android:textSize="18sp"
-                    app:fontName="georgia.ttf" />
-
-                <View
-                    android:layout_width="100dp"
-                    android:layout_height="1dp"
-                    android:layout_below="@+id/storyTitleTextView"
-                    android:layout_marginLeft="14dp"
-                    android:background="@color/common_underline" />
-
-                <ImageView
-                    android:id="@+id/storyOptionImageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:clickable="true"
-                    android:padding="15dp"
-                    android:src="@drawable/ic_more_vert_black_24dp" />
-            </RelativeLayout>
+                android:layout_height="200dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/groups_generic"
+                android:visibility="visible" />
 
             <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/storyBodyTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/titleContainer"
-                android:paddingLeft="14dp"
-                android:paddingRight="14dp"
-                android:paddingTop="14dp"
-                android:text=""
-                android:textColor="@color/short_story.light_black_color"
-                android:textSize="17sp"
-                app:fontName="georgia.ttf" />
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/authorNameTextView"
+                android:id="@+id/ChallengeNameText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/storyBodyTextView"
-                android:padding="14dp"
-                android:text="Reena Goyal"
-                android:textColor="@color/app_blue"
-                android:textSize="16sp"
-                app:fontName="georgia.ttf" />
+                android:layout_alignBottom="@id/ChallengeNameImage"
+                android:layout_marginStart="@dimen/space_20"
+                android:layout_marginTop="6dp"
+                android:text="ABHINAV"
+                android:textColor="@color/white"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:visibility="gone" />
+
+            <LinearLayout
+                android:id="@+id/submit_challenge_relative_Layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/ChallengeNameImage"
+                android:layout_centerHorizontal="true"
+                android:background="@color/white"
+                android:gravity="center"
+                android:padding="@dimen/space_10">
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/submit_story_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/profile_create_content_bg"
+                    android:backgroundTint="@color/app_red"
+                    android:gravity="center"
+                    android:paddingLeft="20dp"
+                    android:paddingTop="13dp"
+                    android:paddingRight="20dp"
+                    android:paddingBottom="13dp"
+                    android:text="@string/submit_story_text"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rootView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/article_listing_item_border_bg"
+            android:visibility="gone">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/storyImageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/default_article" />
+
+
+            <RelativeLayout
+                android:id="@+id/followAuthorRelativeContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/storyImageView"
+                android:layout_marginEnd="@dimen/space_10">
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/authorNameTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:padding="14dp"
+                    android:text="Abhinav"
+                    android:textColor="#465391"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/followAuthorTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@id/followAuthorTextView"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="@dimen/space_30"
+                    android:padding="14dp"
+                    android:text="@string/ad.follow_author"
+                    android:textColor="@color/app_red"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    android:visibility="visible" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/menuItem"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignEnd="@id/followAuthorTextView"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/ic_more_vert_black_24dp" />
+
+            </RelativeLayout>
 
             <View
                 android:id="@+id/underline"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_below="@+id/authorNameTextView"
+                android:layout_below="@+id/followAuthorRelativeContainer"
+                android:layout_marginStart="@dimen/space_10"
+                android:layout_marginEnd="@dimen/space_10"
                 android:background="@color/light_underline" />
 
             <RelativeLayout
@@ -164,12 +153,11 @@
                     android:layout_centerVertical="true"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:clickable="true"
-                    android:paddingBottom="12dp"
                     android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
                     android:paddingTop="12dp"
-                    android:src="@drawable/ic_facebook"
-                    android:tint="@color/app_red" />
+                    android:paddingRight="8dp"
+                    android:paddingBottom="12dp"
+                    app:srcCompat="@drawable/ic_facebook_svg" />
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/whatsappShareImageView"
@@ -179,10 +167,10 @@
                     android:layout_toRightOf="@+id/facebookShareImageView"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:clickable="true"
-                    android:paddingBottom="12dp"
                     android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
                     android:paddingTop="12dp"
+                    android:paddingRight="8dp"
+                    android:paddingBottom="12dp"
                     android:src="@drawable/ic_whats_app"
                     android:tint="@color/app_red" />
 
@@ -194,10 +182,10 @@
                     android:layout_toRightOf="@+id/whatsappShareImageView"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:clickable="true"
-                    android:paddingBottom="12dp"
                     android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
                     android:paddingTop="12dp"
+                    android:paddingRight="8dp"
+                    android:paddingBottom="12dp"
                     android:src="@drawable/ic_insta"
                     android:tint="@color/app_red" />
 
@@ -209,14 +197,15 @@
                     android:layout_toRightOf="@+id/instagramShareImageView"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:clickable="true"
-                    android:paddingBottom="12dp"
                     android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
                     android:paddingTop="12dp"
+                    android:paddingRight="8dp"
+                    android:paddingBottom="12dp"
                     android:src="@drawable/collectionadd"
                     android:tint="@color/app_red" />
 
                 <LinearLayout
+                    android:id="@+id/linearLayoutContainer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
@@ -235,9 +224,9 @@
                             android:id="@+id/storyRecommendationCountTextView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:paddingBottom="10dp"
                             android:paddingLeft="6dp"
                             android:paddingTop="10dp"
+                            android:paddingBottom="10dp"
                             android:text="0"
                             android:textColor="@color/ad.stats.text"
                             android:textSize="15sp"
@@ -247,10 +236,10 @@
                             android:id="@+id/likeImageView"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:paddingBottom="12dp"
                             android:paddingLeft="5dp"
-                            android:paddingRight="4dp"
                             android:paddingTop="12dp"
+                            android:paddingRight="4dp"
+                            android:paddingBottom="12dp"
                             android:src="@drawable/ic_ss_like"
                             android:tint="@color/app_red" />
                     </LinearLayout>
@@ -265,39 +254,27 @@
                             android:id="@+id/storyCommentCountTextView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:paddingBottom="10dp"
                             android:paddingLeft="6dp"
                             android:paddingTop="10dp"
+                            android:paddingBottom="10dp"
                             android:text="0"
                             android:textColor="@color/ad.stats.text"
                             android:textSize="15sp"
                             app:fontName="open_sans.ttf" />
 
                         <ImageView
+                            android:id="@+id/icSsComment"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
-                            android:paddingBottom="12dp"
                             android:paddingLeft="5dp"
-                            android:paddingRight="4dp"
                             android:paddingTop="12dp"
+                            android:paddingRight="4dp"
+                            android:paddingBottom="12dp"
                             android:src="@drawable/ic_ss_comment"
                             android:tint="@color/app_red" />
                     </LinearLayout>
-
                 </LinearLayout>
-                <!--<com.mycity4kids.widget.CustomFontTextView-->
-                <!--android:id="@+id/articleViewCountTextView"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginBottom="10dp"-->
-                <!--android:layout_marginRight="10dp"-->
-                <!--android:drawableLeft="@drawable/ic_views"-->
-                <!--android:drawablePadding="3dp"-->
-                <!--android:text=""-->
-                <!--android:textColor="@color/ad.stats.text"-->
-                <!--android:textSize="12sp"-->
-                <!--app:fontName="open_sans.ttf" />-->
             </RelativeLayout>
         </RelativeLayout>
     </RelativeLayout>
-</RelativeLayout>
+</androidx.cardview.widget.CardView>
