--- a/MyCity4Kids/MyCity4Kids/res/layout/video_carousel_container.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/video_carousel_container.xml
@@ -12,8 +12,8 @@
         android:id="@+id/linearLayoutVideoCrousalConatiner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="#f9f9f9">
+        android:background="#f9f9f9"
+        android:orientation="horizontal">
 
         <FrameLayout
             android:id="@+id/videoContainerFL1"
@@ -418,224 +418,203 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@drawable/short_story_border_bg"
         android:visibility="gone">
 
-        <RelativeLayout
-            android:id="@+id/mainView"
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/storyImageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/short_story.card_bg_1"
-            android:elevation="2dp">
+            android:adjustViewBounds="true"
+            android:src="@drawable/default_article" />
 
-            <RelativeLayout
-                android:id="@+id/titleContainer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
 
-                <com.mycity4kids.widget.CustomFontTextView
-                    android:id="@+id/storyTitleTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@+id/storyOptionImageView"
-                    android:maxLines="2"
-                    android:paddingLeft="14dp"
-                    android:paddingTop="14dp"
-                    android:paddingRight="14dp"
-                    android:paddingBottom="14dp"
-                    android:text=""
-                    android:textColor="@color/short_story.light_black_color"
-                    android:textSize="18sp"
-                    app:fontName="georgia.ttf" />
-
-                <View
-                    android:id="@+id/viewview"
-                    android:layout_width="100dp"
-                    android:layout_height="1dp"
-                    android:layout_below="@+id/storyTitleTextView"
-                    android:layout_marginLeft="14dp"
-                    android:background="@color/common_underline" />
-
-                <ImageView
-                    android:id="@+id/storyOptionImageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:clickable="true"
-                    android:padding="15dp"
-                    android:src="@drawable/ic_more_vert_black_24dp" />
-            </RelativeLayout>
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/storyBodyTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/titleContainer"
-                android:paddingLeft="14dp"
-                android:paddingTop="14dp"
-                android:paddingRight="14dp"
-                android:text=""
-                android:textColor="@color/short_story.light_black_color"
-                android:textSize="17sp"
-                app:fontName="georgia.ttf" />
+        <RelativeLayout
+            android:id="@+id/followAuthorRelativeContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/storyImageView"
+            android:layout_marginEnd="@dimen/space_10">
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/authorNameTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/storyBodyTextView"
+                android:layout_alignParentStart="true"
                 android:padding="14dp"
-                android:text="Reena Goyal"
-                android:textColor="@color/short_story.blue"
+                android:text="Abhinav"
+                android:textColor="#465391"
                 android:textSize="16sp"
-                app:fontName="georgia.ttf" />
+                android:textStyle="bold" />
 
-            <View
-                android:id="@+id/underline"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_below="@+id/authorNameTextView"
-                android:background="@color/light_underline" />
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/followAuthorTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@id/followAuthorTextView"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="@dimen/space_30"
+                android:padding="14dp"
+                android:text="@string/ad.follow_author"
+                android:textColor="@color/app_red"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:visibility="visible" />
 
-            <RelativeLayout
-                android:id="@+id/statsContainer"
-                android:layout_width="match_parent"
-                android:layout_height="42dp"
-                android:layout_below="@+id/underline"
-                android:background="@color/white">
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/menuItem"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@id/followAuthorTextView"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_more_vert_black_24dp" />
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/facebookShareImageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:clickable="true"
-                    android:paddingLeft="8dp"
-                    android:paddingTop="12dp"
-                    android:paddingRight="8dp"
-                    android:paddingBottom="12dp" />
+        </RelativeLayout>
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/whatsappShareImageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@+id/facebookShareImageView"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:clickable="true"
-                    android:paddingLeft="8dp"
-                    android:paddingTop="12dp"
-                    android:paddingRight="8dp"
-                    android:paddingBottom="12dp"
-                    android:src="@drawable/ic_whats_app"
-                    android:tint="@color/app_red" />
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/instagramShareImageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@+id/whatsappShareImageView"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:clickable="true"
-                    android:paddingLeft="8dp"
-                    android:paddingTop="12dp"
-                    android:paddingRight="8dp"
-                    android:paddingBottom="12dp"
-                    android:src="@drawable/ic_insta"
-                    android:tint="@color/app_red" />
+        <View
+            android:id="@+id/underline"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@+id/followAuthorRelativeContainer"
+            android:background="@color/light_underline" />
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/genericShareImageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@+id/instagramShareImageView"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:clickable="true"
-                    android:paddingLeft="8dp"
-                    android:paddingTop="12dp"
-                    android:paddingRight="8dp"
-                    android:paddingBottom="12dp"
-                    android:src="@drawable/ic_share_white"
-                    android:tint="@color/app_red" />
+        <RelativeLayout
+            android:id="@+id/statsContainer"
+            android:layout_width="match_parent"
+            android:layout_height="42dp"
+            android:layout_below="@+id/underline"
+            android:background="@color/white">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/facebookShareImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:paddingLeft="8dp"
+                android:paddingTop="12dp"
+                android:paddingRight="8dp"
+                android:paddingBottom="12dp"
+                android:tint="@color/app_red"
+                app:srcCompat="@drawable/ic_facebook_svg" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/whatsappShareImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/facebookShareImageView"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:paddingLeft="8dp"
+                android:paddingTop="12dp"
+                android:paddingRight="8dp"
+                android:paddingBottom="12dp"
+                android:src="@drawable/ic_whats_app"
+                android:tint="@color/app_red" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/instagramShareImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/whatsappShareImageView"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:paddingLeft="8dp"
+                android:paddingTop="12dp"
+                android:paddingRight="8dp"
+                android:paddingBottom="12dp"
+                android:src="@drawable/ic_insta"
+                android:tint="@color/app_red" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/genericShareImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/instagramShareImageView"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:paddingLeft="8dp"
+                android:paddingTop="12dp"
+                android:paddingRight="8dp"
+                android:paddingBottom="12dp"
+                android:src="@drawable/ic_share_white"
+                android:tint="@color/app_red" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true">
 
                 <LinearLayout
-                    android:id="@+id/lnrFirst"
+                    android:id="@+id/storyRecommendationContainer"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true">
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:clickable="true"
+                    android:orientation="horizontal">
 
-                    <LinearLayout
-                        android:id="@+id/storyRecommendationContainer"
+                    <com.mycity4kids.widget.CustomFontTextView
+                        android:id="@+id/storyRecommendationCountTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="?attr/selectableItemBackgroundBorderless"
-                        android:clickable="true"
-                        android:orientation="horizontal">
+                        android:paddingLeft="6dp"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        android:text="0"
+                        android:textColor="@color/ad.stats.text"
+                        android:textSize="15sp"
+                        app:fontName="open_sans.ttf" />
 
-                        <com.mycity4kids.widget.CustomFontTextView
-                            android:id="@+id/storyRecommendationCountTextView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingLeft="6dp"
-                            android:paddingTop="10dp"
-                            android:paddingBottom="10dp"
-                            android:text="0"
-                            android:textColor="@color/ad.stats.text"
-                            android:textSize="15sp"
-                            app:fontName="open_sans.ttf" />
-
-                        <ImageView
-                            android:id="@+id/likeImageView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:paddingLeft="5dp"
-                            android:paddingTop="12dp"
-                            android:paddingRight="4dp"
-                            android:paddingBottom="12dp"
-                            android:src="@drawable/ic_ss_like"
-                            android:tint="@color/app_red" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/storyCommentContainer"
+                    <ImageView
+                        android:id="@+id/likeImageView"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <com.mycity4kids.widget.CustomFontTextView
-                            android:id="@+id/storyCommentCountTextView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:paddingLeft="6dp"
-                            android:paddingTop="10dp"
-                            android:paddingBottom="10dp"
-                            android:text="0"
-                            android:textColor="@color/ad.stats.text"
-                            android:textSize="15sp"
-                            app:fontName="open_sans.ttf" />
-
-                        <ImageView
-                            android:id="@+id/ImageFirst"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:paddingLeft="5dp"
-                            android:paddingTop="12dp"
-                            android:paddingRight="4dp"
-                            android:paddingBottom="12dp"
-                            android:src="@drawable/ic_ss_comment"
-                            android:tint="@color/app_red" />
-                    </LinearLayout>
-
+                        android:layout_height="match_parent"
+                        android:paddingLeft="5dp"
+                        android:paddingTop="12dp"
+                        android:paddingRight="4dp"
+                        android:paddingBottom="12dp"
+                        android:src="@drawable/ic_ss_like"
+                        android:tint="@color/app_red" />
                 </LinearLayout>
-            </RelativeLayout>
+
+                <LinearLayout
+                    android:id="@+id/storyCommentContainer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <com.mycity4kids.widget.CustomFontTextView
+                        android:id="@+id/storyCommentCountTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="6dp"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        android:text="0"
+                        android:textColor="@color/ad.stats.text"
+                        android:textSize="15sp"
+                        app:fontName="open_sans.ttf" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:paddingLeft="5dp"
+                        android:paddingTop="12dp"
+                        android:paddingRight="4dp"
+                        android:paddingBottom="12dp"
+                        android:src="@drawable/ic_ss_comment"
+                        android:tint="@color/app_red" />
+                </LinearLayout>
+
+            </LinearLayout>
         </RelativeLayout>
     </RelativeLayout>
 </LinearLayout>
