--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -550,4 +550,5 @@
     <color name="color_FFFFFF96">#FFFFFF96</color>
     <color name="color_FFFFFF80">#FFFFFF80</color>
     <color name="color_B4ECE4">#B4ECE4</color>
+    <color name="color_E2E2E2">#E2E2E2</color>
 </resources>
