--- a/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
@@ -92,4 +92,6 @@
     <dimen name="space_74">74dp</dimen>
     <dimen name="space_115">115dp</dimen>
     <dimen name="space_56">56dp</dimen>
+    <dimen name="space_17">17dp</dimen>
+    <dimen name="space_22">22dp</dimen>
 </resources>
