--- a/MyCity4Kids/MyCity4Kids/res/layout/short_story_card_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/short_story_card_activity.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -26,7 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:text="@string/short_s.add_story"
+                android:text="@string/user_article.published.edit"
                 android:textColor="@color/user_activities.toolbar.title"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
