--- a/MyCity4Kids/MyCity4Kids/res/layout/short_story_text_format_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/short_story_text_format_fragment.xml
@@ -9,8 +9,9 @@
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="0.4"
         android:layout_marginLeft="@dimen/space_10"
         android:layout_marginTop="@dimen/space_16"
         android:orientation="vertical">
@@ -72,8 +73,9 @@
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="0.6"
         android:layout_marginLeft="@dimen/space_10"
         android:layout_marginTop="@dimen/space_16"
         android:orientation="vertical">
@@ -102,13 +104,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-                <com.mycity4kids.widget.CustomFontTextView
+                <ImageView
                     android:id="@+id/align_left"
-                    android:layout_width="@dimen/space_22"
-                    android:layout_height="@dimen/space_17"
+                    android:layout_width="@dimen/space_65"
+                    android:layout_height="@dimen/space_50"
                     android:layout_gravity="center_vertical"
-                    android:layout_margin="@dimen/space_20"
-                    android:background="@drawable/ic_text_align_left" />
+                    android:padding="@dimen/space_16"
+                    app:srcCompat="@drawable/ic_text_align_left" />
 
                 <View
                     android:layout_width="1dp"
@@ -118,13 +120,13 @@
                     android:background="@color/color_E2E2E2" />
 
 
-                <com.mycity4kids.widget.CustomFontTextView
+                <ImageView
                     android:id="@+id/align_center"
-                    android:layout_width="@dimen/space_22"
-                    android:layout_height="@dimen/space_17"
+                    android:layout_width="@dimen/space_65"
+                    android:layout_height="@dimen/space_50"
                     android:layout_gravity="center_vertical"
-                    android:layout_margin="@dimen/space_20"
-                    android:background="@drawable/ic_text_align_center" />
+                    android:padding="@dimen/space_16"
+                    app:srcCompat="@drawable/ic_text_align_center" />
 
                 <View
                     android:layout_width="1dp"
@@ -134,13 +136,13 @@
                     android:background="@color/color_E2E2E2" />
 
 
-                <com.mycity4kids.widget.CustomFontTextView
+                <ImageView
                     android:id="@+id/align_right"
-                    android:layout_width="@dimen/space_22"
-                    android:layout_height="@dimen/space_17"
+                    android:layout_width="@dimen/space_65"
+                    android:layout_height="@dimen/space_50"
                     android:layout_gravity="center_vertical"
-                    android:layout_margin="@dimen/space_20"
-                    android:background="@drawable/ic_text_align_right" />
+                    android:padding="@dimen/space_16"
+                    app:srcCompat="@drawable/ic_text_align_right" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
