--- a/MyCity4Kids/MyCity4Kids/res/layout/short_story_text_format_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/short_story_text_format_fragment.xml
@@ -11,9 +11,9 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.4"
         android:layout_marginLeft="@dimen/space_10"
         android:layout_marginTop="@dimen/space_16"
+        android:layout_weight="0.4"
         android:orientation="vertical">
 
         <com.mycity4kids.widget.CustomFontTextView
@@ -40,15 +40,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-                <com.mycity4kids.widget.CustomFontTextView
+                <ImageView
                     android:id="@+id/textsize_up"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_margin="@dimen/space_20"
-                    android:background="@drawable/ic_font_size_up"
-                    android:textColor="@color/campaign_expired"
-                    android:textSize="14sp" />
+                    android:padding="@dimen/space_16"
+                    app:srcCompat="@drawable/ic_font_size_up" />
 
                 <View
                     android:layout_width="1dp"
@@ -57,16 +55,14 @@
                     android:layout_marginBottom="@dimen/space_5"
                     android:background="@color/color_E2E2E2" />
 
-
-                <com.mycity4kids.widget.CustomFontTextView
+                <ImageView
                     android:id="@+id/textsize_down"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_margin="@dimen/space_20"
-                    android:background="@drawable/ic_font_size_down"
-                    android:textColor="@color/campaign_expired"
-                    android:textSize="14sp" />
+                    android:padding="@dimen/space_16"
+                    app:srcCompat="@drawable/ic_font_size_down" />
+
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
@@ -75,9 +71,9 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.6"
         android:layout_marginLeft="@dimen/space_10"
         android:layout_marginTop="@dimen/space_16"
+        android:layout_weight="0.6"
         android:orientation="vertical">
 
         <com.mycity4kids.widget.CustomFontTextView
@@ -106,10 +102,10 @@
 
                 <ImageView
                     android:id="@+id/align_left"
-                    android:layout_width="@dimen/space_65"
-                    android:layout_height="@dimen/space_50"
+                    android:layout_width="@dimen/space_55"
+                    android:layout_height="@dimen/space_44"
                     android:layout_gravity="center_vertical"
-                    android:padding="@dimen/space_16"
+                    android:padding="@dimen/space_10"
                     app:srcCompat="@drawable/ic_text_align_left" />
 
                 <View
@@ -122,10 +118,10 @@
 
                 <ImageView
                     android:id="@+id/align_center"
-                    android:layout_width="@dimen/space_65"
-                    android:layout_height="@dimen/space_50"
+                    android:layout_width="@dimen/space_55"
+                    android:layout_height="@dimen/space_44"
                     android:layout_gravity="center_vertical"
-                    android:padding="@dimen/space_16"
+                    android:padding="@dimen/space_10"
                     app:srcCompat="@drawable/ic_text_align_center" />
 
                 <View
@@ -138,10 +134,10 @@
 
                 <ImageView
                     android:id="@+id/align_right"
-                    android:layout_width="@dimen/space_65"
-                    android:layout_height="@dimen/space_50"
+                    android:layout_width="@dimen/space_55"
+                    android:layout_height="@dimen/space_44"
                     android:layout_gravity="center_vertical"
-                    android:padding="@dimen/space_16"
+                    android:padding="@dimen/space_10"
                     app:srcCompat="@drawable/ic_text_align_right" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
