--- a/MyCity4Kids/MyCity4Kids/res/layout/short_story_listing_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/short_story_listing_item.xml
@@ -7,6 +7,12 @@
     android:layout_margin="10dp"
     android:background="@drawable/short_story_border_bg">
 
+    <com.mycity4kids.widget.StoryShareCardWidget
+        android:id="@+id/storyShareCardWidget"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"/>
+
     <RelativeLayout
         android:id="@+id/mainView"
         android:layout_width="match_parent"
