--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -9,6 +9,15 @@
     <color name="app_pink">#FF4081</color>
     <color name="app_red">#D54058</color>
     <color name="app_light_pink">#E997A8</color>
+
+    <color name="all_facebook_share">#3B5998</color>
+    <color name="all_whatsapp_share">#4CAF50</color>
+    <color name="all_instagram_share">#C837AB</color>
+    <color name="all_generic_share">#38C5A5</color>
+
+    <color name="all_toolbar_title">#545454</color>
+    <color name="short_story_author_name">#465391</color>
+
     <color name="orange_new">#F5A623</color>
 
     <color name="app_red_50_opacity">#80D54058</color>
