--- a/MyCity4Kids/MyCity4Kids/res/layout/add_short_story_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_short_story_activity.xml
@@ -39,7 +39,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:text="@string/short_s.add_story"
+                        android:text="@string/short_s_write"
                         android:textColor="@color/user_activities.toolbar.title"
                         android:textSize="20sp"
                         app:fontName="oswald_regular.ttf" />
@@ -167,7 +167,7 @@
                 android:id="@+id/storyBodyEditText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@+id/underline"
+                android:layout_below="@+id/wordCounterTextView"
                 android:background="@null"
                 android:gravity="top|left"
                 android:hint="@string/short_s.add.body_hint"
@@ -182,7 +182,7 @@
                 android:id="@+id/wordCounterTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignTop="@+id/storyBodyEditText"
+                android:layout_below="@+id/underline"
                 android:layout_alignRight="@+id/storyBodyEditText"
                 android:background="@drawable/short_story_word_count_bg"
                 android:paddingLeft="@dimen/space_8"
