--- a/MyCity4Kids/MyCity4Kids/res/layout/story_share_card_widget.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/story_share_card_widget.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <!--    <LinearLayout-->
-    <!--        android:id="@+id/share"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_below="@+id/toolbar"-->
-    <!--        android:orientation="vertical">-->
 
     <androidx.cardview.widget.CardView
         android:id="@+id/shareCardView"
@@ -32,23 +26,26 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/storyAuthorTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_toStartOf="@+id/logoImageView"
+                android:ellipsize="marquee"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
-                android:text="Allu Arjun"
+                android:singleLine="true"
+                android:text=""
                 android:textColor="@color/short_story_author_name"
                 android:textSize="16sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/logoImageView"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/storyImageView" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/logoImageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="120dp"
+                android:layout_height="20dp"
                 android:layout_alignParentEnd="true"
                 android:layout_margin="10dp"
                 app:layout_constraintBottom_toBottomOf="parent"
