clean up + sharing fixes

--- a/MyCity4Kids/MyCity4Kids/res/layout/challenge_recyler_adapter.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/challenge_recyler_adapter.xml
@@ -24,15 +24,14 @@
         android:layout_margin="10dp"
         android:paddingTop="7dp"
         android:paddingBottom="7dp"
-        android:text="adssasa kjsdjk kjdsb"
+        android:text=""
         android:textColor="@color/greytxt_color"
         android:textSize="20sp"
         android:visibility="visible"
         app:fontName="oswald.ttf" />
 
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout
         android:id="@+id/rootView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -212,7 +211,7 @@
         android:layout_margin="10dp"
         android:paddingTop="7dp"
         android:paddingBottom="7dp"
-        android:text="adssasa kjsdjk kjdsb"
+        android:text=""
         android:textColor="@color/greytxt_color"
         android:textSize="20sp"
         android:visibility="gone"
