--- a/MyCity4Kids/MyCity4Kids/res/layout/challenge_short_story_recycle_adapter.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/challenge_short_story_recycle_adapter.xml
@@ -24,15 +24,14 @@
         android:layout_margin="10dp"
         android:paddingTop="7dp"
         android:paddingBottom="7dp"
-        android:text="adssasa kjsdjk kjdsb"
+        android:text=""
         android:textColor="@color/greytxt_color"
         android:textSize="20sp"
         android:visibility="gone"
         app:fontName="oswald.ttf" />
 
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout
         android:id="@+id/rootView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -95,7 +94,7 @@
                     android:layout_height="wrap_content"
                     android:background="@color/white"
                     android:paddingLeft="14dp"
-                    android:text="jnvkjsjkbfdjk"
+                    android:text=""
                     android:textSize="18sp"
                     android:visibility="gone"
                     app:fontName="georgia.ttf" />
