--- a/MyCity4Kids/MyCity4Kids/res/layout/short_story_listing_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/short_story_listing_item.xml
@@ -13,7 +13,7 @@
         android:id="@+id/storyShareCardWidget"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="invisible"/>
+        android:visibility="invisible" />
 
     <RelativeLayout
         android:id="@+id/rootView"
@@ -29,49 +29,56 @@
             android:src="@drawable/default_article" />
 
 
-        <RelativeLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/followAuthorRelativeContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/storyImageView1"
-            android:layout_marginEnd="@dimen/space_10">
+            android:layout_below="@+id/storyImageView1">
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/authorNameTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
+                android:ellipsize="marquee"
                 android:padding="14dp"
+                android:singleLine="true"
                 android:text=""
                 android:textColor="#465391"
                 android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/followAuthorTextView"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/followAuthorTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignEnd="@id/followAuthorTextView"
-                android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="@dimen/space_30"
                 android:padding="14dp"
                 android:text="@string/ad.follow_author"
                 android:textColor="@color/app_red"
                 android:textSize="14sp"
                 android:textStyle="bold"
-                android:visibility="visible" />
+                android:visibility="visible"
+                app:layout_constraintEnd_toStartOf="@+id/menuItem"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/authorNameTextView"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/menuItem"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignEnd="@id/followAuthorTextView"
-                android:layout_alignParentEnd="true"
+                android:layout_height="0dp"
                 android:layout_centerVertical="true"
-                android:src="@drawable/ic_more_vert_black_24dp" />
+                android:paddingStart="4dp"
+                android:paddingEnd="4dp"
+                android:src="@drawable/ic_more_vert_black_24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        </RelativeLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <View
             android:id="@+id/underline"
